public/style/style.less
@import (less) 'bootstrap/bootstrap';

@body-bg: #f7f7f7;

@font-family-base: 'Open Sans', sans-serif;
@headings-color: #111;

@headings-font-family: 'Montserrat', sans-serif;
@headings-font-weight: bold;

body {
  padding-bottom: 20px;
}

em {
  font-style: normal;
  background-color: #FFE4B5;
}

.entries {
  color: #4f4f4f;
  font-weight: 300;
  font-size: 1.65em;
  padding: 0px 0px 0px 10px;
  border: 0;
  width: 90%;
}

.entries-xs {
  color: #4f4f4f;
  font-weight: 300;
  font-size: 1.65em;
  padding: 0px 0px 0px 10px;
  border: 0;
  width: 100%;
}

.movie-info {
  font-weight: 600;
}

.aside .aside-dialog .aside-header {
  background-color: #ffe939;
}

.formly-field {
  margin-bottom: 16px;
}

.formly.row, .formly.row .formly-field {
  margin-bottom: 0;
}

.formly.row .formly-field:first-child {
  padding-left: 0;
}

.formly.row .formly-field:nth-last-child(2) {
  padding-right: 0;
}

.formly-field-group ng-form {
  margin: 0;
}

.formly-field-group {
  margin: 0;
}




.actions { margin: 20px 0; }
.upload_link { color: #000; border: 1px solid #aaa; background-color: #e0e0e0;
    font-size: 18px; padding: 5px 10px; width: 250px; margin: 10px 0 20px 0;
    font-weight: bold; text-align: center; text-decoration: none; margin: 5px; }

.photo { margin: 10px; padding: 10px; border-top: 2px solid #ccc; }
.photo .thumbnail { margin-top: 10px; display: block; max-width: 200px; border: none; }
.toggle_info { margin-top: 10px; font-weight: bold; color: #e62401; display: block; }
.thumbnail_holder { height: 182px; margin-bottom: 5px; margin-right: 10px; }
.info td, .uploaded_info td { font-size: 12px }
.note { margin: 20px 0}

.inline { display: inline-block; }
td { vertical-align: top; padding-right: 5px; }

#direct_upload_jquery, #direct_upload { padding: 20px 20px; margin: 20px 0;
    border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; }

#direct_upload_jquery h1, #direct_upload h1 { margin: 0 0 15px 0; }

.back_link { font-weight: bold; display: block; font-size: 16px; margin: 10px 0; }

#direct_upload, #direct_upload_jquery { border: 4px dashed #ccc; }
#direct_upload.dragover { border-color: #0c0; }
#direct_upload.dragover-err { border-color: #c00; }

.upload_details { font-size: 12px; margin: 20px; border-top: 1px solid #ccc; word-wrap: break-word; }
.upload_button_holder {
    position: relative;
    overflow: hidden;
    display: inline-block;
}

.upload_button {
    display: inline-block;
    position: relative;
    font-weight: bold;
    font-size: 14px;
    background-color: rgb(15, 97, 172);
    color: #fff;
    padding: 5px 0;
    border: 1px solid #000;
    border-radius: 4px;
    width: 100px;
    height: 18px;
    text-decoration: none;
    text-align: center;
    cursor: pointer;
}

.upload_button_holder .upload_button {
    display: block;
}

.upload_button:hover {
    background-color: rgb(17, 133, 240);
}
.upload_button_holder .cloudinary_fileupload {
    opacity: 0;
    filter: alpha(opacity=0);
    cursor: pointer;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border: none;
}
.progress-bar{
  width: 100px;
  position: relative;
  height: 4px;
}
.progress-bar .progress{
  height: 4px;
  background-color: #ff0000;
  width: 0;
}
.preview img, .preview audio, .preview video {
    max-width: 300px;
    max-height: 150px;
}
.modal-img{
  max-width:900px;
}
.modal-img img {
  max-width: 100%;
  height: auto;
  width: auto;
  image-orientation: from-image;
}

.rrssb-whatsapp a {
  background: rgb(100,212,72) !important;
}

.rrssb-whatsapp a:hover {
  background: rgb(81,170,58) !important;
}

.custom-search-input{
    margin: 10px;
    padding: 3px;
    border: solid 1px #E4E4E4;
    border-radius: 6px;
    background-color: #fff;
}

.custom-search-input input{
    border: 0;
    box-shadow: none;
    color: #4f4f4f;
    font-weight: 300;
    font-size: 1.2em;
}

.custom-search-input span{
    margin: 2px 0 0 0;
    background: none;
    box-shadow: none;
    border: 0;
    color: #666666;
    padding: 0 8px 0 10px;
    border-right: solid 1px #ccc;
}

.custom-search-input button:hover{
    border: 0;
    box-shadow: none;
    border-left: solid 1px #ccc;
}


.widget {
  display: block;
  padding: @thumbnail-padding;
  border-radius: @thumbnail-border-radius;
  background: #fefefe;
  border: 2px solid #fcfcfc;
  box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
  margin: 0 2px 0px;
  width: 250px;
  min-height:150px;
  transition: opacity .4s ease-in-out;

  > img,
  a > img {
    &:extend(.img-responsive);
    margin-left: auto;
    margin-right: auto;
  }

  // Add a hover state for linked versions only
  a&:hover,
  a&:focus,
  a&.active {
    border-color: @link-color;
  }

  // Image captions
  .caption {
    padding: @thumbnail-caption-padding;
    color: @thumbnail-caption-color;
  }

}

.widget-panel {
  margin: 0 auto;
  margin-top: 10px
}

/* Make Header Sticky */
.sticky_header {
  height:50px;
  left:0;
  position:fixed;
  width:100%;
  top:0;
  z-index: 100;
}

.floating_panel {
  padding-top:60px;
}

.brand-img {
  height: 48px;
}

.center-align {
  display:block;
  margin-left: auto;
  margin-right: auto;
}

.more-link {
  margin-bottom: 5px;
  background-color: #f7f7f7;
  color: #3af;
  border: 1px solid #ddd;
}

#collapse-button.btn.collapsed:before
{
    font-family: Ionicons;
    content:'more \f20b';
}
#collapse-button.btn:before
{
    font-family: Ionicons;
    content:'hide \f128';
}

.block {
  display: block;
}

.img-card{
  max-height: 300px;
  vertical-align: top
}

.img-card img {
  max-height:290px;
  max-width: 250px;
  margin-bottom: 5px;
}

.ribbon {
  width: 99%;
  margin-left: -6px;
  position: absolute;
  bottom:2px;
  text-align: center;
  font-size: 0.7em!important;
  background: #4cd468;
  background: -webkit-gradient(linear, left top, left bottom, from(#4cd468), to(#2cab2c));
  background: -webkit-linear-gradient(top, #4cd468, #2cab2c);
  background: -moz-linear-gradient(top, #4cd468, #2cab2c);
  background: -ms-linear-gradient(top, #4cd468, #2cab2c);
  background: -o-linear-gradient(top, #4cd468, #2cab2c);
  background-image: -ms-linear-gradient(top, #4cd468 0%, #2cab2c 100%);
  -webkit-box-shadow: rgba(000,000,000,0.3) 0 0px 0px;
  -moz-box-shadow: rgba(000,000,000,0.3) 0 0px 0px;
  box-shadow: rgba(000,000,000,0.3) 0 0px 0px;
  font-family: 'Helvetica Neue',Helvetica, sans-serif;
}
.ribbon h1 {
  font-size: 1.8em!important;
  color: #f5f5f5;
  text-shadow: #7ed45b 0 1px 0;
  margin:0px;
  padding: 5px 5px;
 }

.ribbon-stitches-top {
   margin-top:2px;
   border-top: 1px dashed rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
 }
.ribbon-stitches-bottom {
   margin-bottom:2px;
   border-top: 1px dashed rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3);
 }

.step {
  display: inline-block;
  line-height: 1;
  position: relative;
  width: 40%;
}
.size-18 {
  font-size: 18px;
}
.size-24 {
  font-size: 24px;
}
.size-32 {
  font-size: 32px;
}

